# upgraded-spoon

./: .gitignore  CHAIN_GAMBLER_GUIDE.md  IMPROVEMENTS_SUMMARY.md  README.md  START_BOT.bat  START_DEMO_BOT.bat  SUPREME_GO.bat  SUPREME_GO.ps1  SUPREME_GO_NONINTERACTIVE.bat  SUPREME_GO_STARTUP.bat  conftest.py  pyproject.toml  pytest.ini  requirements.txt  smoke_test.py  test_mt5_direct.py
.github/workflows/: python-tests.yml
02_Core_Python/: requirements.txt
02_Core_Python/Python/: Server_AGI.py  action_translator.py  agi_brain.py  agi_n8n_bridge.py  api_server.py  audit_registry.py  autonomy_loop.py  backtest_engine.py  backtester.py  backup_manager.py  config_utils.py  cross_asset.py  data_feed.py  dreamer_policy.py  event_guard.py  event_intel.py  exit_engine_r.py  feature_pipeline.py  feature_registry.py  feature_selector.py  guardian_integration.py  hybrid_brain.py  live_safety.py  market_guardian.py  metaapi_executor.py  ml_signal.py  model_evaluator.py  model_registry.py  monitoring_dashboard.py  mt5_compat.py  mt5_executor.py  mt5_executor_recovered.py  news_sentiment.py  ollama_advisor.py  order_manager.py  paper_trader.py  paper_trading.py  parallel_lane_manager.py  pipeline_audit.py  portfolio_allocator.py  (+15 more)
02_Core_Python/config/: XAUUSDm.yaml
02_Core_Python/drl/: adaptive_feature_extractor.py  chronos_extractor.py  decision_head.py  dreamer_agent.py  grouped_gated_extractor.py  hybrid_trading_head.py  lstm_feature_extractor.py  ppo_agent.py  regime_detector.py  regime_retrain_callback.py  trading_env.py  (+3 more)
scripts/: mini_pipeline_tui.py  monitor_tui.py
(+115 files in other folders)
