[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "chain_gambler"
version = "0.1.0"
description = "AI-powered multi-symbol trading platform with PPO, LSTM, and MT5 integration"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}

dependencies = [
    "loguru>=0.7.0",
    "pyyaml>=6.0",
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "stable-baselines3>=2.0.0",
    "sb3-contrib>=2.0.0",
    "torch>=2.0.0",
    "gymnasium>=0.28.0",
    "shimmy>=1.0.0",
    "scikit-learn>=1.3.0",
    "joblib>=1.3.0",
    "ta>=0.10.0",
    "requests>=2.31.0",
    "flask>=3.0.0",
    "flask-cors>=4.0.0",
]

[project.optional-dependencies]
mt5 = ["MetaTrader5>=5.0.0"]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.1.0",
    "mypy>=1.5.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*", "Python*", "drl*", "training*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501", "E402"]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true